--- a/k8s/apps/opentelemetry-collectors/kustomization.yaml
+++ b/k8s/apps/opentelemetry-collectors/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - sa.yaml
 - image-policy.yaml
 - image-update-automation.yaml
+- externalsecret.yaml
 - ./default
 - ./filelog
 - ./k8s-daemonset
