--- a/k8s/apps/opentelemetry-collectors/externalsecret.yaml
+++ b/k8s/apps/opentelemetry-collectors/externalsecret.yaml
@@ -14,3 +14,7 @@ spec:
     remoteRef:
       key: mackerel
       property: api-key
+  - secretKey: vaxila-api-key
+    remoteRef:
+      key: mackerel
+      property: vaxila-api-key
