--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -42,9 +42,10 @@ spec:
     minReplicas: 1
     maxReplicas: 5
     metrics:
-    - type: Resource
-      resource:
-        name: memory
+    - type: Pod
+      pods:
+        metric:
+          name: memory
         target:
           type: Utilization
           averageUtilization: 500
