--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -75,7 +75,7 @@ spec:
     minReplicas: 1
     maxReplicas: 5
     metrics:
-    - type: Pod
+    - type: Pods
       pods:
         metric:
           name: memory
