--- a/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
@@ -50,7 +50,7 @@ spec:
     minReplicas: 1
     maxReplicas: 5
     metrics:
-    - type: Pod
+    - type: Pods
       pods:
         metric:
           name: memory
