--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -42,7 +42,7 @@ spec:
     minReplicas: 1
     maxReplicas: 5
     metrics:
-    - type: Pod
+    - type: Pods
       pods:
         metric:
           name: memory
