--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -80,8 +80,8 @@ spec:
         metric:
           name: memory
         target:
-          type: Utilization
-          averageUtilization: 500
+          type: Value
+          value: 1Gi
   resources:
     requests:
       memory: 100Mi
