--- a/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
@@ -55,5 +55,5 @@ spec:
         metric:
           name: memory
         target:
-          type: Utilization
-          averageUtilization: 500
+          type: Value
+          value: 1Gi
