--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -47,5 +47,5 @@ spec:
         metric:
           name: memory
         target:
-          type: Value
-          value: 1Gi
+          type: AverageValue
+          averageValue: 1Gi
