entry too far behindを解決
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -62,6 +62,7 @@ spec:
         shard_streams:
           enabled: true
           desired_rate: 104857600 # 10MiB
+        reject_old_samples: false
     write:
       replicas: 2
       autoscaling:
