--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -132,7 +132,7 @@ jobs:
           wget https://github.com/homeport/dyff/releases/download/v1.8.0/dyff_1.8.0_linux_amd64.tar.gz
           tar -xvf dyff_1.8.0_linux_amd64.tar.gz
           chmod +x dyff
-    
+
       - name: Build markdown comment with manifest diff
         run: |
           echo "# Manifest diff
@@ -188,6 +188,30 @@ jobs:
         uses: docker://ghcr.io/yannh/kubeconform:latest
         with:
           args: "-ignore-missing-schemas -strict -summary manifests-head.yaml"
+
+  scan:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: manifests
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          scan-type: "config"
+          hide-progress: true
+          format: "sarif"
+          output: "trivy-results.sarif"
+          exit-code: "1"
+          ignore-unfixed: true
+          severity: "CRITICAL,HIGH"
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: "trivy-results.sarif"
 
   failed:
     runs-on: ubuntu-latest
