--- a/k8s/apps/dashy/deployment.yaml
+++ b/k8s/apps/dashy/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: dashy
+        securityContext:
+          readOnlyRootFilesystem: true
         image: lissy93/dashy:3.1.0 # {"$imagepolicy": "default:dashy"}
         imagePullPolicy: IfNotPresent
         ports:
