--- a/k8s/apps/github-readme-stats/deployment.yaml
+++ b/k8s/apps/github-readme-stats/deployment.yaml
@@ -14,6 +14,8 @@ spec:
     spec:
       containers:
       - name: github-readme-stats
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/walnuts1018/github-readme-stats:v1.0.3 # {"$imagepolicy": "default:github-readme-stats"}
         imagePullPolicy: IfNotPresent
         ports:
