--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: http-dump
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/walnuts1018/http-dump:e0bba65edee83cdf30187f7c6b91209e4ae69b80-22 # {"$imagepolicy": "default:http-dump"}
         ports:
         - name: http
