--- a/k8s/apps/mysql-default/mysqlcluster.yaml
+++ b/k8s/apps/mysql-default/mysqlcluster.yaml
@@ -37,6 +37,8 @@ spec:
               topologyKey: "kubernetes.io/hostname"
       containers:
       - name: mysqld
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/cybozu-go/moco/mysql:8.4.0
         resources:
           requests:
