--- a/k8s/apps/wakatime-to-slack-profile/deployment.yaml
+++ b/k8s/apps/wakatime-to-slack-profile/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: wakatime-to-slack-profile
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/walnuts1018/wakatime-to-slack-profile:0.2.2 # {"$imagepolicy": "default:wakatime-to-slack-profile"}
         imagePullPolicy: IfNotPresent
         ports:
