--- a/k8s/apps/walnuts-dev/deployment.yaml
+++ b/k8s/apps/walnuts-dev/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: walnuts-dev
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/walnuts1018/walnuts.dev:584e1ea506d9b960d619624ee3a2b85a0d76e750-221 # {"$imagepolicy": "default:walnuts-dev"}
         imagePullPolicy: IfNotPresent
         ports:
