--- a/k8s/apps/blog/deployment.yaml
+++ b/k8s/apps/blog/deployment.yaml
@@ -14,6 +14,8 @@ spec:
     spec:
       containers:
       - name: blog
+        securityContext:
+          readOnlyRootFilesystem: true
         image: nginx:1.27.1 # {"$imagepolicy": "default:blog"}
         ports:
         - containerPort: 80
