--- a/k8s/apps/external-dns/deployment.yaml
+++ b/k8s/apps/external-dns/deployment.yaml
@@ -16,6 +16,8 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
+        securityContext:
+          readOnlyRootFilesystem: true
         image: ghcr.io/walnuts1018/external-dns:670a2816bbb5c344117eab45003d7a6ff2c86349-10 # {"$imagepolicy": "kube-system:external-dns"}
         args:
         - --source=ingress
