--- a/k8s/apps/kibana/deployment.yaml
+++ b/k8s/apps/kibana/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: kibana
+        securityContext:
+          readOnlyRootFilesystem: true
         image: docker.elastic.co/kibana/kibana:8.15.1 # {"$imagepolicy": "default:kibana"}
         ports:
         - name: http
