--- a/k8s/apps/oekaki-dengon-game/back/deployment.yaml
+++ b/k8s/apps/oekaki-dengon-game/back/deployment.yaml
@@ -19,6 +19,8 @@ spec:
     spec:
       containers:
       - name: oekaki-dengon-game-back
+        securityContext:
+          readOnlyRootFilesystem: true
         image: "ghcr.io/kmc-jp/oekaki-dengon-game-back:v0.0.0-a6d6d6e7d66e6d0dfafbf416b462be908b208489-13" # {"$imagepolicy": "default:oekaki-dengon-game-back"}
         imagePullPolicy: IfNotPresent
         ports:
