--- a/k8s/apps/openchokin/back/deployment.yaml
+++ b/k8s/apps/openchokin/back/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: openchokin-back
+        securityContext:
+          readOnlyRootFilesystem: true
         image: "ghcr.io/walnuts1018/openchokin-back:v0.0.0-cd205cba77a922ba01009c04203a0e4b962a31d8-97" # {"$imagepolicy": "default:openchokin-back"}
         imagePullPolicy: IfNotPresent
         ports:
