--- a/k8s/apps/tailscale/deployment.yaml
+++ b/k8s/apps/tailscale/deployment.yaml
@@ -40,6 +40,7 @@ spec:
         securityContext:
           runAsUser: 1000
           runAsGroup: 1000
+          readOnlyRootFilesystem: true
         resources:
           requests:
             memory: "20Mi"
