--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -1,14 +1,14 @@
-name: k8s CI
+name: Config Scan
 
 on:
   pull_request:
     paths:
       - "k8s/**"
-      - ".github/workflows/k8s.yaml"
   push:
+    branches:
+      - main
     paths:
       - "k8s/**"
-      - ".github/workflows/k8s.yaml"
   workflow_dispatch:
 jobs:
   scan:
