--- a/k8s/apps/kibana/deployment.yaml
+++ b/k8s/apps/kibana/deployment.yaml
@@ -31,3 +31,9 @@ spec:
           limits: {}
           requests:
             memory: 350Mi
+        volumeMounts:
+        - mountPath: /usr/share/kibana/data
+          name: kibana-data
+      volumes:
+      - name: kibana-data
+        emptyDir: {}
