--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -15,8 +15,8 @@ spec:
     spec:
       containers:
       - name: photoprism
-        securityContext:
-          readOnlyRootFilesystem: true
+        # securityContext:
+        #   readOnlyRootFilesystem: true
         image: photoprism/photoprism:240711 # {"$imagepolicy": "photoprism:photoprism"}
         resources:
           requests:
