--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -24,6 +24,7 @@ jobs:
           output: "trivy-results.sarif"
           ignore-unfixed: true
           severity: "CRITICAL,HIGH"
+          trivy-config: trivy.yaml
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
