mv security-scan.yaml
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -3,11 +3,14 @@ name: Config Scan
 on:
   pull_request:
     paths:
+      - .github/workflows/security-scan.yaml
       - "k8s/**"
+      - "trivy.yaml"
   push:
     branches:
       - main
     paths:
+      - .github/workflows/security-scan.yaml
       - "k8s/**"
       - "trivy.yaml"
   workflow_dispatch:
