--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -5,7 +5,7 @@ on:
     paths:
       - .github/workflows/security-scan.yaml
       - "k8s/**"
-      - "trivy.yaml"
+      - ".trivyignore.yaml"
   push:
     branches:
       - main
@@ -13,6 +13,7 @@ on:
       - .github/workflows/security-scan.yaml
       - "k8s/**"
       - "trivy.yaml"
+      - ".trivyignore.yaml"
   workflow_dispatch:
 jobs:
   scan:
