--- a/.trivyignore.yaml
+++ b/.trivyignore.yaml
@@ -5,5 +5,6 @@ misconfigurations:
   statement: Accept Privileged
 - id: KSV046
   paths:
-  - "k8s/_flux"
+  - "k8s/_flux/pre-kurumi/flux-system/gotk-components.yaml"
+  - "k8s/_flux/kurumi/flux-system/gotk-components.yaml"
   statement: fluxcd must manage all resource
