--- a/k8s/apps/machine-status-api/deployment.yaml
+++ b/k8s/apps/machine-status-api/deployment.yaml
@@ -20,8 +20,10 @@ spec:
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsGroup: 997
-          privileged: true
           readOnlyRootFilesystem: true
+          capabilities:
+            add:
+            - "SYS_RAWIO"
         ports:
         - containerPort: 8080
         env:
@@ -37,6 +39,9 @@ spec:
           requests:
             memory: "10Mi"
           limits: {}
+        volumeMounts:
+        - mountPath: /dev/gpiomem
+          name: gpiomem
       priorityClassName: high
       nodeSelector:
         kubernetes.io/hostname: cheese
@@ -44,3 +49,7 @@ spec:
       - key: "node-role.kubernetes.io/control-plane"
         operator: "Exists"
         effect: "NoSchedule"
+      volumes:
+      - name: gpiomem
+        hostPath:
+          path: /dev/gpiomem
