--- a/k8s/apps/oekaki-dengon-game/front/deployment.yaml
+++ b/k8s/apps/oekaki-dengon-game/front/deployment.yaml
@@ -20,6 +20,8 @@ spec:
       - name: oekaki-dengon-game-front
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         image: ghcr.io/kmc-jp/oekaki-dengon-game-front:v0.0.0-a6d6d6e7d66e6d0dfafbf416b462be908b208489-87 # {"$imagepolicy": "default:oekaki-dengon-game-front"}
         imagePullPolicy: IfNotPresent
         ports:
