--- a/k8s/apps/openchokin/front/deployment.yaml
+++ b/k8s/apps/openchokin/front/deployment.yaml
@@ -18,6 +18,8 @@ spec:
       - name: openchokin-front
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         image: "ghcr.io/walnuts1018/openchokin-front:v0.0.0-805921b42b330190ff496e2d810ec3846947162a-66" #{"$imagepolicy": "default:openchokin-front"}
         imagePullPolicy: IfNotPresent
         ports:
