--- a/k8s/apps/redis-haproxy/deployment.yaml
+++ b/k8s/apps/redis-haproxy/deployment.yaml
@@ -30,6 +30,8 @@ spec:
       - name: haproxy
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         image: haproxy:3.0.4 # {"$imagepolicy": "databases:redis-haproxy"}
         ports:
         - containerPort: 8080
