--- a/k8s/apps/walnuts-dev-www-redirect/deployment.yaml
+++ b/k8s/apps/walnuts-dev-www-redirect/deployment.yaml
@@ -20,6 +20,8 @@ spec:
         - containerPort: 8080
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         volumeMounts:
         - mountPath: /etc/nginx
           readOnly: true
