--- a/k8s/apps/blog/deployment.yaml
+++ b/k8s/apps/blog/deployment.yaml
@@ -19,6 +19,8 @@ spec:
         - containerPort: 8080
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         volumeMounts:
         - mountPath: /etc/nginx
           readOnly: true
