--- a/k8s/apps/machine-status-api/deployment.yaml
+++ b/k8s/apps/machine-status-api/deployment.yaml
@@ -21,6 +21,8 @@ spec:
         securityContext:
           runAsGroup: 997
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
           privileged: true
         ports:
         - containerPort: 8080
