--- a/k8s/apps/tailscale/deployment.yaml
+++ b/k8s/apps/tailscale/deployment.yaml
@@ -41,6 +41,8 @@ spec:
           runAsUser: 1000
           runAsGroup: 1000
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         resources:
           requests:
             memory: "20Mi"
