--- a/k8s/apps/walnuts-dev/deployment.yaml
+++ b/k8s/apps/walnuts-dev/deployment.yaml
@@ -18,6 +18,8 @@ spec:
       - name: walnuts-dev
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         image: ghcr.io/walnuts1018/walnuts.dev:ec2d2e944c46af9326dfd87143f55d0a2f6b886e-228 # {"$imagepolicy": "default:walnuts-dev"}
         imagePullPolicy: IfNotPresent
         ports:
