--- a/k8s/apps/mysql-default/mysqlcluster.yaml
+++ b/k8s/apps/mysql-default/mysqlcluster.yaml
@@ -39,6 +39,7 @@ spec:
       - name: mysqld
         securityContext:
           readOnlyRootFilesystem: true
+          runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
         image: ghcr.io/cybozu-go/moco/mysql:8.4.0
