--- a/k8s/apps/tailscale/deployment.yaml
+++ b/k8s/apps/tailscale/deployment.yaml
@@ -41,6 +41,7 @@ spec:
           runAsUser: 1000
           runAsGroup: 1000
           readOnlyRootFilesystem: true
+          runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
         resources:
