--- a/k8s/apps/flagger-loadtester/helm.yaml
+++ b/k8s/apps/flagger-loadtester/helm.yaml
@@ -3,8 +3,7 @@ kind: HelmRepository
 metadata:
   name: flagger-loadtester
 spec:
-  url: oci://ghcr.io/fluxcd/charts
-  type: oci
+  url: https://flagger.app
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
