--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -33,6 +33,7 @@ spec:
       ui:
         enabled: true
       metrics:
-
+        enableOpenMetrics: true
+        enabled: '{dns,drop,tcp,flow,port-distribution,icmp,httpV2:exemplars=true}'
         serviceMonitor:
           enabled: true
