--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -34,6 +34,13 @@ spec:
         enabled: true
       metrics:
         enableOpenMetrics: true
-        enabled: '{dns,drop,tcp,flow,port-distribution,icmp,httpV2:exemplars=true}'
+        enabled:
+        - dns
+        - drop
+        - tcp
+        - flow
+        - port-distribution
+        - icmp
+        - httpV2:exemplars=true
         serviceMonitor:
           enabled: true
