add ingress nginx metrics
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/ingress-nginx/helm.yaml
+++ b/k8s/apps/ingress-nginx/helm.yaml
@@ -40,7 +40,10 @@ spec:
                 operator: In
                 values:
                 - amd64
-
       opentelemetry:
         enabled: true
         name: opentelemetry
+      metrics:
+        enabled: true
+        serviceMonitor:
+          enabled: true
